@@ -1,5 +1,10 @@
 2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* libmisc/utmp.c: The ut argument of prepare_utmp() might be NULL.
+	ut_id needs to be forged in that case.
+
+2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/utmp.c: Removed old documentation of setutmp().
 
 2009-04-22  Nicolas François  <nicolas.francois@centraliens.net>
